--- a/charts/azure-arc-sample/templates/ingress.yaml
+++ b/charts/azure-arc-sample/templates/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: mydog-nginx-ingress
+  name: {{.Release.Name}}-ingress
   annotations:
     kubernetes.io/ingress.class: "traefik"
     labels:
