--- a/charts/azure-arc-sample/templates/ingress.yaml
+++ b/charts/azure-arc-sample/templates/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "traefik"
     labels:
-     name: {{.Release.Name}}
+     app: {{.Release.Name}}
     # traefik.frontend.rule.type: PathPrefixStrip
 spec:
   rules:
