--- a/charts/azure-arc-sample/templates/ingress.yaml
+++ b/charts/azure-arc-sample/templates/ingress.yaml
@@ -15,3 +15,5 @@ spec:
         backend:
           serviceName: {{ .Values.serviceName }}
           servicePort: 8080
+  selector:
+    app: {{.Release.Name}}
